Implement exercise reordering function